--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,132 @@
-.card-game {
+/* CSS Reset */
+html,
+body,
+ul,
+li,
+h1,
+p,
+input {
+  margin: 0;
+  padding: 0;
+}
+
+body,
+button,
+input,
+select {
+  font: 14px/1.4 Helvetica, Arial, sans-serif;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+button,
+input,
+select {
+  border: 0;
+}
+/*CSS Reset */
+
+body {
+  padding: 20px;
+  background: radial-gradient(circle at 50%, #d5b3f5, #8a2ce2);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.list-game {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  list-style-type: none;
+}
+
+/* Media query para tablets */
+@media (max-width: 768px) {
+  .list-game {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* Media query para celulares */
+@media (max-width: 480px) {
+  .list-game {
+    grid-template-columns: 1fr;
+    padding: 0 10px;
+  }
+}
+
+/* CARDS */
+.title {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-shadow: 2px 2px 4px #00000080;
+  color: #ffffff;
 }
 
 .game-item {
-  border: 1px solid #ccc;
+  background-color: #ffffff0d;
+  border: 3px solid #ffffff2e;
+  box-shadow: 0 2px 4px #1f26875e;
   padding: 10px;
   text-align: center;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #ffffff;
+  font-family: "Gill Sans Extrabold", sans-serif;
+  border-radius: 8px;
 }
+
+.game-item img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px #000000e6;
+  margin-bottom: 5px;
+
+}
+
+/* SCROLL BAR */
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #d5b3f5;
+  border-radius: 5px;
+  border: 1px solid #ffffff;
+}
+
+/* Loading */
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+  .loading {
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    top: 43%;
+    left: 43.9%;
+    transform: translate(-50%, -50%);
+    border: 10px solid #ffffff;
+    border-top-color: #8a2ce2;
+    border-radius: 50%;
+    animation: spin 1s infinite linear;
+  }
+
+  .err1 {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: white;
+    font-size: 3rem;
+    overflow: hidden;
+  }
