--- a/src/components/style/Login.css
+++ b/src/components/style/Login.css
@@ -1,3 +1,8 @@
+textarea:focus, input:focus {
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
+
 .container-login {
   position: absolute;
   top: 50%;
@@ -42,6 +47,11 @@
   cursor: pointer;
   width: 100%;
   font-weight: bold
+}
+
+.button-login:hover {
+  background-color: #ffffff;
+  color: #b567ff;
 }
 
 .footer-login {
